fix extra space below header in mobile view-Hitech

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/accessibility-features.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-hitech/css/accessibility-features.less
@@ -6,6 +6,14 @@ html.adobeguides-text-size
   margin-top: 3.538rem;
 }
 
+html.adobeguides-text-size
+  .custom-container
+  .gu-custom-container
+  .col-3grid
+  .outer-container {
+  margin-top: 3.538rem;
+}
+
 html.adobeguides-text-size{
   @media (max-width: 480px) {
   body.hi-tech .custom-container .gu-custom-container .col-9grid .col-9grid-container {
